--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
