--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
+    "jest-environment-node-single-context": "^29.0.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
